# project_8_fastapi

./: .gitignore  TODO.py  alembic.ini  pyproject.toml
frontend/pages/: router.py  schemas.py
frontend/static/styles/: style.css
frontend/templates/contract/: add_contract.html  contracts.html  contracts_filter.html
frontend/templates/contractor/: add_contractor.html  contractors.html  update_contractor.html
frontend/templates/layout/: contracts-toolbar.html  footer.html  header.html  paging.html  storage-toolbar.html  toolbar.html
frontend/templates/menu/: any_result.html  (+1 more)
migrations/: env.py
migrations/versions/: 4c9562d9a707_new_project.py
src/: __init__.py  config.py  jin.py  main.py  query.py  test.py  test_query.py
src/auth/: auth.py  database.py  manager.py  schemas.py
src/contract/: algorithms.py  crud.py  dependencies.py  execution.py  execution_query.py  router.py  schemas.py
src/contractor/: crud.py  dependencies.py  router.py  schemas.py
src/database/: __init__.py  config.py  connect.py  mixins.py  models.py  schemas.py
src/execution/: execution.py  execution_query.py
src/operations/: models.py  router.py  schemas.py
src/possession/: crud.py  dependencies.py  router.py  schemas.py
src/producer/: crud.py  router.py  schemas.py
src/product/: __init__.py  crud.py  dependencies.py  router.py  schemas.py
src/specification/: crud.py  dependencies.py  router.py  schemas.py
src/storage/: crud.py  dependencies.py  router.py  schemas.py
src/transaction/: crud.py  schemas.py
src/view/: view.py  view_query.py  view_scheme.py
(+18 files in other folders)
