
[tool.poetry]
name = "project_8_fastapi"
version = "0.1.0"
description = ""
authors = ["Xalva <maasania@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
alembic = "^1.12.1"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
fastapi-cache2 = "^0.2.1"
Faker = "^20.1.0"
environs = "^9.5.0"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
greenlet = "^3.0.1"
psycopg2 = "^2.9.9"
fastapi-filter = {extras = ["sqlalchemy"], version = "^1.1.0"}
fastapi-pagination = "^0.12.14"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
